# inoe

./: Cargo.toml  README.md
data/: schedule-37c3.xml
src/: config.rs  lib.rs  main.rs
src/state/: mod.rs  schedule.rs  store.rs
src/state/schedule/: convert.rs  mod.rs  model.rs
src/ui/: grid.rs  mod.rs  single.rs
