[package]
name = "inoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
eyre = "0.6"
ratatui = "0.25"
tokio = { version = "1.35", features = ["full"] }
