[package]
name = "inoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
eyre = "0.6"
ratatui = "0.25"
time = { version = "0.3.31", features = ["parsing"] }
tokio = { version = "1.35", features = ["full"] }
uuid = "1.6.1"
xml-rs = "0.8.19"
