[package]
name = "inoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
crossterm = "0.27"
eyre = "0.6"
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyphenation = "0.8.4"
itertools = "0.12.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
ratatui = "0.25"
serde = { version = "1.0.193", features = ["derive"] }
textwrap = { version = "0.16.0", features = ["hyphenation"] }
time = { version = "0.3.31", features = ["parsing", "formatting", "macros", "serde"] }
uuid = { version = "1.6.1", features = ["serde"] }
